0.0.8   July 24, 2011
        - Support custom Thrift transport read/write.

0.0.7   July 23, 2011
        - Support get operations for multiple keys.

0.0.6   July 18, 2011
        - Rename "insert" to "put" and setup alias to keep compatibility.
        - Rename "remove" to "delete" and setup alias to keep compatibility.
        - Fix multiple columns insert bug.

0.0.5   July 17, 2011
        - Support for count and reverse in get_slice and get_count
          functions. (thanks for jcbf, issue #4)
        - Fix typo in sample.
        - Upgrade Thrift interface to 0.8.1 generated version.

0.0.4   April 18, 2011
        - Support consistency level.

0.0.3   April 18, 2011
        - Support timestamp.
        - Remove unnecessary file.

0.0.2   April 18, 2011
        - Rename count() to get_count().
        - Import Cassandra thrift-generated code.

0.0.1   April 18, 2011
        - Initial release.