@@ -1,4 +1,5 @@
 0.0.8   July 24, 2011
+        - INCOMPATIBLE: Remove insert(), use put() instead.
         - Support custom Thrift transport read/write.
 
 0.0.7   July 23, 2011
